--- a/TODO.txt
+++ b/TODO.txt
@@ -3,4 +3,4 @@ TODOs gridding3D:
  - kernel in const mem + tests
  - streams for per channel operation in order to avoid out of mem
  - shared approach evaluation
- - 
+ - measure, correct and conserve TILED access kernels
