--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,9 @@
 TODOs gridding3D:
- - density compensation via gpu
  - kernel in const mem + tests
+ - coordinate structe as float3 + coalesced read instructions via shared memory 
+   (http://www.scribd.com/doc/37932042/CUDA-Performance-Optimization, 
+    http://www.cs.nthu.edu.tw/~cherung/teaching/2010gpucell/CUDA02.pdf)
  - streams for per channel operation in order to avoid out of mem
  - shared approach evaluation
+ - density compensation via gpu
  - measure, correct and conserve TILED access kernels
