--- a/RELEASENOTES.txt
+++ b/RELEASENOTES.txt
@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
 Version 2.0.3
 ----------------------------------------------------------------------
-	- in progress
+	- Anisotropic grid sizes, e.g. 128x128x64 supported.
 
 ----------------------------------------------------------------------
 Version 2.0.2
