--- a/RELEASENOTES.txt
+++ b/RELEASENOTES.txt
@@ -1,4 +1,11 @@
+-----------------------------------------------------------------------
+Version 2.0.4
 ----------------------------------------------------------------------
+	- Use textures for kernel lookup
+	- Use textures for data readout
+	- 
+
+---------------------------------------------------------------------
 Version 2.0.3
 ----------------------------------------------------------------------
 	- Anisotropic grid sizes, e.g. 128x128x64 supported.
