--- a/RELEASENOTES.txt
+++ b/RELEASENOTES.txt
@@ -4,6 +4,7 @@ Version 2.0.4
 	- Use textures for kernel lookup
 	- Use textures for data readout
 	- Balanced gridding to work more efficiently
+	- Apply sens data on GPU
 
 ---------------------------------------------------------------------
 Version 2.0.3
