--- a/RELEASENOTES.txt
+++ b/RELEASENOTES.txt
@@ -3,11 +3,12 @@ Version 2.0.4
 ----------------------------------------------------------------------
 	- Use textures for kernel lookup
 	- Use textures for data readout
-	- Balanced gridding to work more efficiently
+	- Balanced and textured gridding to work more efficiently
 	- Apply sens data on GPU
 	- Automatically export mex-files into gpuNUFFT/@gpuNUFFT/private 
 	  folder
-  - 
+  - Refactored initialization params of MATLAB Operator
+	- 
 
 ---------------------------------------------------------------------
 Version 2.0.3
