--- a/RELEASENOTES.txt
+++ b/RELEASENOTES.txt
@@ -1,9 +1,9 @@
 -----------------------------------------------------------------------
 Version 2.0.5
 ----------------------------------------------------------------------
-	- Enable varying dimensions in all directions, e.g. 3d grids 
-	  with 256x128x64 or 2d grids with 256x128 are supported now.
-	  
+	- Varying dimensions in all directions, e.g. 3d grids with 
+	  256x128x64 or 2d grids with 256x128 are supported now.
+
 -----------------------------------------------------------------------
 Version 2.0.4
 ----------------------------------------------------------------------
