--- a/matlab/README
+++ b/matlab/README
@@ -1,1 +1,10 @@
-MATLAB Test functions
+gpuNUFFT: MATLAB demo 
+
+Run the script `demo/cgsense_phantom_recon.m` to see the gpuNUFFT in action. 
+
+The scripts runs a CG-SENSE reconstruction on phantom MRI data.
+
+To keep the package size and runtime small the coil sensitivities are
+estimated in a quite rough way. Nevertheless, the main functionality 
+of the gpuNUFFT MATLAB operator should be generally understandable. 
+
